force-app/main/default/objects/Inventory__c/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <label>Expiry</label>
    <type>Date</type>
</CustomField>