force-app/main/default/objects/Inventory__c/fields/LocationID__c.field-meta.xml
<CustomField>
    <fullName>LocationID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>LocationID</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>