force-app/main/default/objects/Inventory__c/fields/LOT__c.field-meta.xml
<CustomField>
    <fullName>LOT__c</fullName>
    <label>LOT</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>