force-app/main/default/objects/Inventory__c/fields/Product_number__c.field-meta.xml
<CustomField>
    <fullName>Product_number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product number</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>