force-app/main/default/objects/Inventory__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Destination</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Inventory (Shipping Destination)</relationshipLabel>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>