force-app/main/default/objects/Inventory__c/fields/Shipping_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date_Time__c</fullName>
    <label>Shipping Date/Time</label>
    <type>DateTime</type>
</CustomField>