force-app/main/default/objects/Inventory__c/fields/UPN__c.field-meta.xml
<CustomField>
    <fullName>UPN__c</fullName>
    <label>UPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>